🔐 Add Vibe Code Scanner - security checker for AI-generated code
Inspired by vibe coding's 1st anniversary (Feb 2026):
- Scans for 15+ common security issues
- Detects exposed API keys, SQL injection, XSS risks
- Interactive examples with clean/vulnerable code
- Built-in severity ratings (critical/warning/info)

Trend: 'security is still an afterthought... ship fast, but don't ship auth tokens in the frontend'

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
             <p class="subtitle">Daily micro-apps built from what's trending in AI</p>
             <div class="stats">
                 <div class="stat">
-                    <div class="stat-value" id="app-count">2</div>
+                    <div class="stat-value" id="app-count">3</div>
                     <div class="stat-label">Apps Built</div>
                 </div>
                 <div class="stat">
@@ -222,6 +222,31 @@
         </header>
         
         <main class="apps-grid">
+            <!-- App 3: Vibe Code Scanner -->
+            <article class="app-card">
+                <div class="app-header">
+                    <div>
+                        <h2 class="app-title">
+                            <a href="https://samilamqaddam-lab.github.io/ai-trend-apps/2026-02-03-vibe-code-scanner/index.html">🔐 Vibe Code Scanner</a>
+                        </h2>
+                    </div>
+                    <span class="app-date">2026-02-03</span>
+                </div>
+                <p class="app-trend">"vibe coding turned 1 year old... security is still an afterthought. ship fast, but don't ship auth tokens in the frontend."</p>
+                <p class="app-description">
+                    Paste your AI-generated code and instantly scan for security issues. Detects exposed API keys, SQL injection risks, hardcoded credentials, XSS vulnerabilities, and more. Built for vibe coding's 1st anniversary.
+                </p>
+                <div class="app-tags">
+                    <span class="tag">Security</span>
+                    <span class="tag">Vibe Coding</span>
+                    <span class="tag">Code Analysis</span>
+                </div>
+                <div class="app-links">
+                    <a href="https://samilamqaddam-lab.github.io/ai-trend-apps/2026-02-03-vibe-code-scanner/index.html">▶️ Launch App</a>
+                    <a href="2026-02-03-vibe-code-scanner/README.md">📖 README</a>
+                </div>
+            </article>
+            
             <!-- App 2: Hallucination Dashboard -->
             <article class="app-card">
                 <div class="app-header">
